# genesis_quadruped_rl

./: .gitignore  12_HOUR_TRAINING_GUIDE.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_COUPLING_ANALYSIS.md  ARCHITECTURE_REFACTORING_PROPOSAL.md  CLAUDE.md  LICENSE  README.md  SECURITY_REPORT.md  USER_MANUAL.md  auto_recovery_training.sh  create_progress_dashboard.py  evolution_status.json  monitor_progress.py  monitor_progression.py  progress_dashboard.html  progressive_training_status.json  pyproject.toml  run_5k_with_isolation.sh  train_with_restarts.py  training_status.json
configs/: README.md  curriculum.json  curriculum_medium.json  curriculum_test.json  default.json  high_performance.json  learning_evolution.json  learning_evolution_light.json  progression_demo.json  progressive_phase1.json  progressive_phase2.json  progressive_phase3.json  quadruped_base.json  quadruped_fast.json  quadruped_production.json  quick_demo.json  real_test.json  test.json
demo_videos/: README.md
docs/: DEVELOPMENT_HISTORY.md  EXTENDED_TRAINING_PLAN.md  README.md  TRAINING_PROGRESS.md  VIDEO_GENERATION_GUIDE.md  database_migration_guide.md  stable_baselines3_guide.md  testing_infrastructure.md
examples/: basic_example.py
robot_grounding/: README.md  __init__.py  calculator.py  detector.py  robot_types.py  utils.py
scripts/: analyze_performance.py  checkpoint_video_generator.py  create_demo_video.py  create_learning_evolution_videos.py  create_sample_tensorboard_data.py  debug_termination.py  demo_progression_with_existing.py  demo_trained_model.py  evaluate_sb3.py  main.py  (+22 more)
(+98 files in other folders)
